feat: report complete KVM pre-fault stats
